--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="learning_hours"> learning hours, </string>
+    <string name="learning_leader_details">%1$d learning hours, %2$s.</string>
+    <string name="skill_leader_details">%1$d skill IQ Score, %2$s.</string>
 </resources>
