--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,16 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="learning_leader_details">%1$d learning hours, %2$s.</string>
     <string name="skill_leader_details">%1$d skill IQ Score, %2$s.</string>
+    <string name="close_btn">Close Button</string>
+    <string name="yes">Yes</string>
+    <string name="submission_successful">Submission Successful</string>
+    <string name="submission_not_successful">Submission not successful</string>
+    <string name="no_data">No Data</string>
+    <string name="leaderboard">LEADERBOARD</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="email_address">Email Address</string>
+    <string name="project_on_github_link">Project on GITHUB (Link)</string>
+    <string name="submit">Submit</string>
+    <string name="project_submission">Project Submission</string>
 </resources>
